--- a/hacktoberfest/styles.css
+++ b/hacktoberfest/styles.css
@@ -7,7 +7,6 @@
     box-sizing: border-box;
     font-style: inherit;
     font-weight:inherit ;
-    font-size: 100%;  
     font-family: 'Poppins', sans-serif;
 }
 
@@ -32,6 +31,7 @@ a{
 }
 
 body{
+    font-size: 16px;   
     background-color: var(--base-color);
 }
 
@@ -48,6 +48,12 @@ header{
 .menu{
     width: 100%;
     height: 50px;
+    font-weight: bolder;
+    font-size: 1.1rem;
+}
+
+.menu a{
+    color: #2B3531;
 }
 
 .menu ul{
@@ -73,6 +79,7 @@ header{
 
 .menu ul li:hover ul{
     visibility: visible;
+    color: #B53A25;
 }
 
 .menu ul ul li{
